<resources>
	<string name="app_name">HPG Workout Tool</string>
	<string name="ok">ok</string>
	<string name="yes">yes</string>
	<string name="no">no</string>
	<string name="cancel">cancel</string>
	<string name="back">back</string>
	<string name="loading_str">loading&#x2026;</string>
	<string name="saving_str">saving&#x2026;</string>
	<string name="question_mark">i</string>
	<string name="question_mark_upside_down">\u00bf</string>
	<string name="done">done</string>
	<string name="done_title">Done</string>
	<string name="decimal_point">.</string>
	<string name="clear_short">C</string>
	<string name="clear_word">clear</string>
	<string name="null_string">null</string>
	<string name="hpg_logo_desc">Logo for the Hyde Park Gym</string>
	<string name="possessive_suffix">\'s</string>
	<string name="custom_item_name">custom</string>
	<string name="cancel_title">Cancel</string>
	<string name="none_selected">none selected</string>
	<string name="select">select</string>
	<string name="unit">unit</string>
	<string name="unit_label">Unit</string>
	<string name="name">name</string>
	<string name="menu_help_button">help</string>
	<string name="menu_zoomin_button">\ grow text</string>
	<string name="menu_zoomout_button">\ shrink it</string>
	<string name="menu_zoomreset_button">reset text</string>
	<string name="label_reps">reps = %s</string>
	<string name="label_weight">weight (%1$s) = %2$s</string>
	<string name="label_level">level = %s</string>
	<string name="label_cals">cals = %s</string>
	<string name="label_dist">distance (%1$s) = %2$s</string>
	<string name="label_time">time (%1$s) = %2$s</string>
	<string name="label_other">%1$s (%2$s) = %3$s</string>
	<string name="reps_readable">reps</string>
	<string name="level_readable">level</string>
	<string name="cals_readable">calories</string>
	<string name="weight_readable">weight</string>
	<string name="dist_readable">distance</string>
	<string name="time_readable">time</string>
	<string name="other_readable">other</string>
	<string name="with_readable">reps&#xA0;and&#xA0;%s</string>
	<string name="welcome_title">Hyde Park Gym</string>
	<string name="welcome_subtitle">Workout Tool</string>
	<string name="welcome_start_button">workout</string>
	<string name="welcome_start_help_title">start a workout</string>
	<string name="welcome_start_help_msg">Press this button to
		begin or continue working out.
		\n\n\u2022 This takes you to the <i>Grid</i>, where all your exercises
		are listed and the details of your workouts can be
		found. Most of the time you will start at the Grid, that\'s why it\'s
		the top button!
		\n\nGet ready to sweat!</string>
	<string name="welcome_settings_button">preferences</string>
	<string name="welcome_settings_help_title">Preferences</string>
	<string name="welcome_settings_help_msg">Tap on this
		button to change the settings for this program.
		\n\nDon\'t worry, they are pretty straight-forward.</string>
	<string name="welcome_export_button">import/export</string>
	<string name="welcome_export_help_title">Export Your Workout</string>
	<string name="welcome_export_help_msg">
		This button takes you to a screen where you may
		export your workout to some common formats.
		\n\n(Right now, this part is still a work-in-progress,
		so it doesn\'t do much.)
	</string>
	<string name="welcome_graphs_button">look at graphs</string>
	<string name="welcome_graphs_help_title">Graph Progress</string>
	<string name="welcome_graphs_help_msg">Seeing your progress
		is a great part of getting in shape. Press this button
		to look at all sorts of graphs of how your workouts and
		your body is changing over time.</string>
	<string name="welcome_exit_button">exit</string>
	<string name="welcome_exit_help_title">Exit Program</string>
	<string name="welcome_exit_help_msg">Press this button
		to quit the application. Surprised\? Didn\'t think
		so.</string>
	<string name="welcome_help_help_title">Help!</string>
	<string name="welcome_help_help_msg">Welcome to the
		Hyde Park Gym Workout Tool. This app records
		your workouts and tracks your progress.
		\n\n\u2022 Note that this app is descriptive, not proscriptive.
		That is, it doesn\'t tell
		you what you SHOULD do, it just keeps track of what you did.
		Come on,
		you\'re smart enough to know what sort of workout you want (or
		at least to find the information for yourself).
		\n\n\u2022 For general help about what a screen does, tap on
		the Hyde Park Gym logo at the top right of the screen.
		\n\n\u2022 For help on specific functions, long-tap (press and hold
		for a second or two)
		any button or widget, and a help message will pop up
		describing that function.
		\n\n\u2022 The first
		time you use this app, a few popular exercises are
		listed already listed. You will have to add your favorite
		exercises to the list. But the
		program will remember your exercises, so the next
		time you workout, you can simply select that
		exercise from the list.
		\n\n\u2022 Choose an exercise and record what
		you completed for that set. Do it again for each
		set. The data you
		enter is added to a database which can be viewed
		to track your progress.
		\n\n\u2022 You can change your name from the boring \'default
		user\' and add other users for this app by tapping on the name.
		It\'s a pretty nifty screen\u2014other cool bookkeeping stuff
		can be done there, check it out.
		\n\n\u2022 This app was created by Scott Morgan Biggs in his spare
		time. The good people at Hyde Park Gym in Austin, Texas provided invaluable help
		and assistance. They also trusted me with their good name, but
		are in no way responsible for any damage, frustration, or insults
		that may (or may not) crop up while using this app.  So you should
		send your hate messages to me through the Google Play site. I promise
		to do my best to address the issues (which may not be much\u2014I am
		very far from a programming god, sorry).
		\n\nAnyway, I did lots of
		this stuff in the middle of the night, so you might be amused or
		offended by some of these help messages. So it goes. But in any
		event, I hope this app is as useful to you as it has been to me.
		And THANKS to Brook and all the good people at HPG!
		\n\nHave a good workout!
		</string>
	<string name="welcome_menu_credits_button">show credits</string>
	<string name="welcome_menu_credits_title">Show Credits</string>
	<string name="welcome_menu_credits_msg">
		Hyde Park Gym (4125 Guadalupe St., Austin, TX, 78751, http://hydeparkgym.com/ ) is owned
		and run by Brook Jones. This tool was created with the
		help of him and many of the other fine folks at Hyde Park
		Gym\u2014just look for place with the big arm
		sticking out! Programmed by Scott M. Biggs.</string>
	<string name="welcome_menu_exit_button">exit</string>
	<string name="welcome_version_number">v. 0.9 Pre-Release</string>
	<string name="welcome_manage_db_button">manage users</string>
	<string name="welcome_manage_db_help_title">Manage Users</string>
	<string name="welcome_manage_db_help_msg">
		This takes you to a screen to manage your all the different users.
		You can add more users to the app, change the active
		user, clear the user\'s data, and more!
		\n\n\u2022Details of the user\'s data, like their exercises and workout
		sets are changed from the main grid (tap the \'workout\' button).
	</string>
	<string name="welcome_user_name">Hello, %s!</string>
	<string name="addexer_leave_title">Really\?</string>
	<string name="addexer_leave_msg">Are you sure you want to
		go back to the main workout screen\? This will abandon
		all entries you\'ve made here.</string>
	<string name="addexer_help_title">Add Exercise Help</string>
	<string name="addexer_dist_unit_title">Unit of Distance</string>
	<string name="addexer_dist_unit_msg">How far are you
		going\? But we need to know the unit. Any unit will
		do, like feet, kilometers, inches, milimeters,
		yards, parsecs, etc.</string>
	<string name="row_edit_title">Edit Rows</string>
	<string name="row_edit_desc">Tap the arrows to move a row up or
		down.</string>
	<string name="enter_stress_title">Stress Level</string>
	<string name="enter_stress_prod">Select the stress
		level for this workout set.</string>
	<string name="enter_stress_cond_stress_ok">just right</string>
	<string name="enter_stress_cond_stress_too_hard">too hard</string>
	<string name="enter_stress_cond_stress_too_easy">too easy</string>
	<string name="enter_stress_cond_stress_injury">injury</string>
	<string name="prefs_category_inspector">WORKOUT HISTORY</string>
	<string name="prefs_nag_key">nag</string>
	<string name="prefs_nag_title">Nag</string>
	<string name="prefs_nagging_is_off_msg">Nagging is reduced.
		\nYou will still get messages that are *really* important!
		\n\n(I\'m sick and tired of the program asking me to fill
		out forms and fields that I don\'t have time to fool with!)
	</string>
	<string name="prefs_nagging_is_on_msg">Nagging is on.
		\n\nI like being reminded of things that I may have
		forgotten to do (default).
	</string>
	<string name="prefs_sound_key">sound</string>
	<string name="prefs_sound_title">Sounds</string>
	<string name="prefs_sound_on_msg">Can you hear that\?
		Yeah, I think this program is trying to make some noises (default)!</string>
	<string name="prefs_sound_off_msg">Shhhhh, we\'re playing
		the quiet game now. Don\'t make a sound.</string>
	<string name="prefs_display_key">display</string>
	<string name="prefs_display_title">Enable Screen Saver</string>
	<string name="prefs_display_keep_on_msg">The display will
		stay on as long as this app is activie.</string>
	<string name="prefs_display_save_screen_msg">While using
		this app, the screen saver will kick in
		according to your system settings (default).</string>
	<string name="prefs_inspector_quickview_key">quickview</string>
	<string name="prefs_inspector_quickview_title">Brief History</string>
	<string name="prefs_inspector_quickview_on_msg">
		The Exercise Set History will try to save space when
		displaying your workout sets.
	</string>
	<string name="prefs_inspector_quickview_off_msg">
		The Exercise Set History will display all details
		in a large and easy-to-read style (default).
	</string>
	<string name="prefs_inspector_oldest_first_key">oldest</string>
	<string name="prefs_inspector_oldest_first_title">Chronological Order</string>
	<string name="prefs_inspector_oldest_first_on_msg">
		The oldest (first) workout set will be displayed at the top.
	</string>
	<string name="prefs_inspector_oldest_first_off_msg">
		Your most recent workout set will be at the top (default).
	</string>
</resources>