<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<com.sleepfuriously.hpgworkout.LongCheckboxPreference
		android:key="@string/prefs_nag_key"
		android:defaultValue="true"
		android:summaryOff="@string/prefs_nagging_is_off_msg"
		android:summaryOn="@string/prefs_nagging_is_on_msg"
		android:title="@string/prefs_nag_title" />

	<com.sleepfuriously.hpgworkout.LongCheckboxPreference
		android:key="@string/prefs_sound_key"
		android:defaultValue="true"
		android:summaryOff="@string/prefs_sound_off_msg"
		android:summaryOn="@string/prefs_sound_on_msg"
		android:title="@string/prefs_sound_title" />

	<com.sleepfuriously.hpgworkout.LongCheckboxPreference
		android:key="@string/prefs_display_key"
		android:defaultValue="true"
		android:summaryOff="@string/prefs_display_save_screen_msg"
		android:summaryOn="@string/prefs_display_keep_on_msg"
		android:title="@string/prefs_display_title" />

	<PreferenceCategory
		android:title="@string/prefs_category_inspector"
		android:summary="category summary will be written here."
		>

		<com.sleepfuriously.hpgworkout.LongCheckboxPreference
			android:key="@string/prefs_inspector_quickview_key"
			android:defaultValue="false"
			android:summaryOff="@string/prefs_inspector_quickview_off_msg"
			android:summaryOn="@string/prefs_inspector_quickview_on_msg"
			android:title="@string/prefs_inspector_quickview_title" />

		<com.sleepfuriously.hpgworkout.LongCheckboxPreference
			android:key="@string/prefs_inspector_oldest_first_key"
			android:defaultValue="true"
			android:summaryOn="@string/prefs_inspector_oldest_first_on_msg"
			android:summaryOff="@string/prefs_inspector_oldest_first_off_msg"
			android:title="@string/prefs_inspector_oldest_first_title" />


	</PreferenceCategory>

</PreferenceScreen>