<?xml version="1.0" encoding="utf-8"?>
<!--
	This represents one exercise set that's displayed in the
	history.xml file.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/history_row_ll"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="4dp"
	android:layout_marginLeft="8dp"
	android:layout_marginRight="8dp"
	android:layout_marginTop="4dp"
	android:background="@drawable/rounded_edges_dark"
	android:orientation="vertical"
	android:paddingBottom="3dp"
	android:paddingLeft="6dp"
	android:paddingRight="6dp"
	android:paddingTop="3dp" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/history_row_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="8dp"
				android:gravity="right"
				android:text="date"
				style="@style/white_text_small"
				android:textColor="@color/floral_white"
				/>

			<TextView
				android:id="@+id/history_row_stress_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:text="@string/question_mark"
				style="@style/white_text_medium"
				android:textStyle="bold"
				android:textColor="@color/floral_white"
				/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/history_data_column_ll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/history_row_reps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_reps"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />

			<TextView
				android:id="@+id/history_row_weight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_weight"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />

			<TextView
				android:id="@+id/history_row_level"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_level"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />

			<TextView
				android:id="@+id/history_row_cals"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_cals"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />

			<TextView
				android:id="@+id/history_row_dist"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_dist"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />

			<TextView
				android:id="@+id/history_row_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_time"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />

			<TextView
				android:id="@+id/history_row_other"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_other"
				style="@style/white_text_small"
				android:textColor="@color/hpg_orange_lightest" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>