<?xml version="1.0" encoding="utf-8"?>
<!--
	Essentially a copy of the add_dist_item.xml file.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkdark_gray" >

    <TextView
        android:id="@+id/add_dist_item_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/addexer_dist_unit_title"
	    style="@style/white_text_large"
	    />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/add_dist_item_title_tv"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/hpglogo_36x36" 
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_dist_item_title_tv"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/addexer_dist_unit_msg"
	    style="@style/white_text_medium"
        />

    <EditText
        android:id="@+id/add_dist_item_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/unit"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/add_dist_item_help_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_dist_item_et"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/question_mark" />

    <Button
        android:id="@+id/add_dist_item_cancel_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_dist_item_et"
        android:layout_marginRight="16dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/add_dist_item_help_butt"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/add_dist_item_ok_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_dist_item_et"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:layout_toLeftOf="@+id/add_dist_item_help_butt"
        android:text="@string/ok" />

</RelativeLayout>